--- a/app/sign-in/page.module.css
+++ b/app/sign-in/page.module.css
@@ -131,5 +131,8 @@
 .hodlerButtonWrapper {
   width: 100%;
   max-width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
